添加医院管理

--- a/yygh-parent/service/service-cmn/src/main/resources/application.properties
+++ b/yygh-parent/service/service-cmn/src/main/resources/application.properties
@@ -37,6 +37,7 @@ spring.redis.lettuce.pool.min-idle=0
 #feign.sentinel.enabled=true
 ##??sentinel??
 #spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
+spring.cloud.nacos.discovery.server-addr=http://47.116.123.21:8848
 
 #mongodb??
 #spring.data.mongodb.host=192.168.44.163
