--- a/yygh-parent/service/service-hosp/pom.xml
+++ b/yygh-parent/service/service-hosp/pom.xml
@@ -19,6 +19,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.hanson.yygh</groupId>
+            <artifactId>service-cmn-client</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
