--- a/yygh-parent/service/service-hosp/src/main/resources/application.properties
+++ b/yygh-parent/service/service-hosp/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.data.mongodb.uri=mongodb://47.116.123.21:27017/yygh_hosp
 ##??mapper xml?????
 ##mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
-## nacos????
-#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+# nacos????
+spring.cloud.nacos.discovery.server-addr=http://47.116.123.21:8848
 #
 ##??sentinel
 #feign.sentinel.enabled=true
