增加手机短信验证码登录功能及微信扫码登录功能

--- a/yygh-parent/service/service-user/pom.xml
+++ b/yygh-parent/service/service-user/pom.xml
@@ -10,8 +10,14 @@
 
     <version>1.0</version>
     <artifactId>service-user</artifactId>
-    <packaging>jar</packaging>
-    <name>service-user</name>
-    <description>service-user</description>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>com.hanson.yygh</groupId>
+            <artifactId>service-cmn-client</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
