--- a/yygh-parent/service/service-msm/src/main/resources/application.properties
+++ b/yygh-parent/service/service-msm/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.redis.lettuce.pool.min-idle=0
 spring.cloud.nacos.discovery.server-addr=47.116.123.21:8848
 
 aliyun.sms.regionId=default
-aliyun.sms.accessKeyId=LTAI5tC2FvgviWdUNUZ5jWgJ
-aliyun.sms.secret=PrPg79ZyoI1nrJqwIf6VplJyBOmR2W
+#aliyun.sms.accessKeyId=xxx
+#aliyun.sms.secret=xxx
