增加oss对象存储、就诊人认证及用户锁定审批等功能

--- a/yygh-parent/service/service-msm/src/main/resources/application.properties
+++ b/yygh-parent/service/service-msm/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.redis.lettuce.pool.min-idle=0
 spring.cloud.nacos.discovery.server-addr=47.116.123.21:8848
 
 aliyun.sms.regionId=default
+aliyun.sms.accessKeyId=
+aliyun.sms.secret=
