增加微信登陆，付款，退款，聚合展示等功能

--- a/yygh-parent/pom.xml
+++ b/yygh-parent/pom.xml
@@ -119,4 +119,17 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+<!--项目打包时会将java目录中的*.xml文件也会进行打包-->
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
