--- a/yygh-parent/service-gateway/src/main/resources/application.properties
+++ b/yygh-parent/service-gateway/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=80
 spring.application.name=service-gateway
 
 # nacos????
-spring.cloud.nacos.discovery.server-addr=http://47.116.123.21:8848/
+spring.cloud.nacos.discovery.server-addr=http://localhost:8848/
 
 #????????
 spring.cloud.gateway.discovery.locator.enabled=true
@@ -53,3 +53,17 @@ spring.cloud.gateway.routes[5].id=service-oss
 spring.cloud.gateway.routes[5].uri=lb://service-oss
 #??????,??servicerId?auth-service?/auth/??
 spring.cloud.gateway.routes[5].predicates= Path=/*/oss/**
+
+#????id
+spring.cloud.gateway.routes[6].id=service-order
+#?????uri
+spring.cloud.gateway.routes[6].uri=lb://service-order
+#??????,??servicerId?auth-service?/auth/??
+spring.cloud.gateway.routes[6].predicates= Path=/*/order/**
+
+#????id
+spring.cloud.gateway.routes[7].id=service-statistics
+#?????uri
+spring.cloud.gateway.routes[7].uri=lb://service-statistics
+#??????,??servicerId?auth-service?/auth/??
+spring.cloud.gateway.routes[7].predicates= Path=/*/statistics/**
