--- a/yygh-parent/service/service-msm/src/main/resources/application.properties
+++ b/yygh-parent/service/service-msm/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=service-msm
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-spring.redis.host=47.116.123.21
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.database= 0
 spring.redis.timeout=1800000
@@ -18,8 +18,14 @@ spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
 
 # nacos????
-spring.cloud.nacos.discovery.server-addr=47.116.123.21:8848
+spring.cloud.nacos.discovery.server-addr=localhost:8848
 
 aliyun.sms.regionId=default
-aliyun.sms.accessKeyId=
-aliyun.sms.secret=
+aliyun.sms.accessKeyId=L
+aliyun.sms.secret=P
+
+#rabbitmq\u5730\u5740
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
