--- a/yygh-parent/hospital-manage/src/main/resources/application-dev.yml
+++ b/yygh-parent/hospital-manage/src/main/resources/application-dev.yml
@@ -14,7 +14,7 @@ spring:
     #配置模板路径，默认是templates，可以不用配置
     prefix: classpath:/templates/
   redis:
-    host: 47.116.123.21
+    host: localhost
     port: 6379
     database: 0
     timeout: 1800000
@@ -28,16 +28,16 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.116.123.21:8081/yygh_manage?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:8081/yygh_manage?characterEncoding=utf-8&useSSL=false
     username: root
     password: admin
     hikari:
       connection-test-query: SELECT 1
-      connection-timeout: 60000
-      idle-timeout: 500000
-      max-lifetime: 540000
-      maximum-pool-size: 12
-      minimum-idle: 10
+      connection-timeout: 120000 # 连接超时：120秒
+      idle-timeout: 600000 # 空闲超时：600秒
+      max-lifetime: 1800000 # 最大生命周期：1800秒（30分钟）
+      maximum-pool-size: 20 # 最大连接池大小：20
+      minimum-idle: 10 # 最小空闲连接数：10
       pool-name: GuliHikariPool
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
