--- a/yygh-parent/service/service-cmn/src/main/resources/application.properties
+++ b/yygh-parent/service/service-cmn/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.profiles.active=dev
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.116.123.21:8081/yygh_cmn?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:8081/yygh_cmn?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
 
@@ -16,7 +16,7 @@ spring.datasource.password=admin
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-spring.redis.host=47.116.123.21
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.database= 0
 spring.redis.timeout=1800000
@@ -37,7 +37,7 @@ spring.redis.lettuce.pool.min-idle=0
 #feign.sentinel.enabled=true
 ##??sentinel??
 #spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
-spring.cloud.nacos.discovery.server-addr=http://47.116.123.21:8848
+spring.cloud.nacos.discovery.server-addr=http://localhost:8848
 
 #mongodb??
 #spring.data.mongodb.host=192.168.44.163
