--- a/yygh-parent/service/service-hosp/src/main/resources/application.properties
+++ b/yygh-parent/service/service-hosp/src/main/resources/application.properties
@@ -8,21 +8,35 @@ spring.profiles.active=dev
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.116.123.21:8081/yygh_hosp?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:8081/yygh_hosp?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
+
+
+# HikariCP settings
+# ????????????
+spring.datasource.hikari.connection-timeout=60000
+# ??????????????
+spring.datasource.hikari.idle-timeout=600000
+# ??????????????
+spring.datasource.hikari.max-lifetime=1800000
+# ???????
+spring.datasource.hikari.minimum-idle=10
+# ???????
+spring.datasource.hikari.maximum-pool-size=20
+
 
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-spring.data.mongodb.uri=mongodb://47.116.123.21:27017/yygh_hosp
+spring.data.mongodb.uri=mongodb://localhost:27017/yygh_hosp
 
 ##??mapper xml?????
 ##mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 # nacos????
-spring.cloud.nacos.discovery.server-addr=http://47.116.123.21:8848
+spring.cloud.nacos.discovery.server-addr=http://localhost:8848
 #
 ##??sentinel
 #feign.sentinel.enabled=true
@@ -40,4 +54,20 @@ spring.cloud.nacos.discovery.server-addr=http://47.116.123.21:8848
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
 
+#rabbitmq\u5730\u5740
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 #logging.level.root=DEBUG
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database= 0
+spring.redis.timeout=1800000
+spring.redis.lettuce.pool.max-active=20
+spring.redis.lettuce.pool.max-wait=-1
+#????????(???????)
+spring.redis.lettuce.pool.max-idle=5
+spring.redis.lettuce.pool.min-idle=0
