--- a/yygh-parent/service/service-oss/src/main/resources/application.properties
+++ b/yygh-parent/service/service-oss/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
 # nacos\u670D\u52A1\u5730\u5740
-spring.cloud.nacos.discovery.server-addr=47.116.123.21:8848
+spring.cloud.nacos.discovery.server-addr=localhost:8848
 
-aliyun.oss.endpoint=
-aliyun.oss.accessKeyId=
-aliyun.oss.secret=
+aliyun.oss.endpoint=https://oss-cn-shanghai.aliyuncs.com
+aliyun.oss.accessKeyId=L
+aliyun.oss.secret=P
 aliyun.oss.bucket=yygh-hanson
