--- a/yygh-parent/service/service-user/src/main/resources/application.properties
+++ b/yygh-parent/service/service-user/src/main/resources/application.properties
@@ -8,15 +8,28 @@ spring.profiles.active=dev
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.116.123.21:8081/yygh_user?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:8081/yygh_user?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
+
+# HikariCP settings
+# ????????????
+spring.datasource.hikari.connection-timeout=60000
+# ??????????????
+spring.datasource.hikari.idle-timeout=600000
+# ??????????????
+spring.datasource.hikari.max-lifetime=1800000
+# ???????
+spring.datasource.hikari.minimum-idle=10
+# ???????
+spring.datasource.hikari.maximum-pool-size=20
+
 
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-spring.redis.host=47.116.123.21
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.database= 0
 spring.redis.timeout=1800000
@@ -27,7 +40,7 @@ spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
 
 # nacos????
-spring.cloud.nacos.discovery.server-addr=http://47.116.123.21:8848
+spring.cloud.nacos.discovery.server-addr=http://localhost:8848
 
 #??mapper xml?????
 mybatis-plus.mapper-locations=classpath:com/hanson/yygh/user/mapper/xml/*.xml
